Phase 6 incomplete
Solver working but not for all puzzles